--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "name": "SD Hancaljan",
   "publisher": "Jannik Hansson/Naviators",
   "brief": "Best ever",
-  "description": "The best ever solution made ...",
+  "description": "The best ever solution madesdf...",
   "version": "1.0.0.0",
   "compatibilityId": "1.0.0.0",
   "privacyStatement": "",
