--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "server": "http://localhost",
             "serverInstance": "DynamicsNAV110",
             "authentication": "Windows",
-            "startupObjectId": 22,
+            "startupObjectId": 123456702,
             "schemaUpdateMode": "Recreate"
         }
     ]
